--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,42 @@
       background: #000;
     }
 
-    .main {
+    .loader {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: #0d0e1a;
+      z-index: 9999;
       display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      animation: fadeOut 1s ease 1.5s forwards;
+    }
+
+    .loader img {
+      width: 80px;
+      animation: breathe 2.5s ease-in-out infinite;
+    }
+
+    .loader p {
+      margin-top: 20px;
+      font-size: 14px;
+      color: #bbb;
+      opacity: 0.8;
+    }
+
+    @keyframes breathe {
+      0%, 100% { transform: scale(1); opacity: 0.9; }
+      50% { transform: scale(1.15); opacity: 1; }
+    }
+
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; pointer-events: none; }
+    }
+
+    .main {
+      display: none;
       flex-direction: column;
       height: 100vh;
     }
@@ -102,23 +136,24 @@
       line-height: 1.6;
       font-size: 1rem;
       font-weight: 500;
+      text-align: center;
     }
 
     .accionables span {
       display: block;
       margin: 6px 0;
       opacity: 0;
-      animation: typeIn 0.4s ease forwards;
+      animation: riseIn 0.6s ease forwards;
     }
 
-    @keyframes typeIn {
-      from { opacity: 0; transform: translateY(5px); }
-      to { opacity: 1; transform: translateY(0); }
+    @keyframes riseIn {
+      0% { opacity: 0; transform: translateY(12px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
 
     .portada-wrapper img {
-      max-height: 96%;
-      max-width: 96%;
+      max-height: 98%;
+      max-width: 98%;
       object-fit: contain;
       border-radius: 14px;
       box-shadow: 0 25px 60px rgba(0,0,0,0.4);
@@ -128,7 +163,7 @@
 
     @keyframes floatLoop {
       0%, 100% { transform: translateY(0px) scale(1) rotateY(0deg); }
-      50% { transform: translateY(-12px) scale(1.03) rotateY(2deg); }
+      50% { transform: translateY(-12px) scale(1.04) rotateY(1.5deg); }
     }
 
     .hidden {
@@ -164,7 +199,14 @@
 </head>
 <body>
 
-  <div class="main">
+  <!-- Loader -->
+  <div class="loader" id="loader">
+    <img src="/imagotipo.png" alt="Loader">
+    <p>Una pausa real puede cambiarlo todo</p>
+  </div>
+
+  <!-- App -->
+  <div class="main" id="main">
     <div class="grid">
       <div class="block" id="detente" style="background: linear-gradient(135deg, #ff5f6d, #ffc371);">
         <div class="block-content label" id="detenteLabel">Detente</div>
@@ -225,6 +267,8 @@
     let detenteOpen = false;
     let leeOpen = false;
 
+    const loader = document.getElementById('loader');
+    const main = document.getElementById('main');
     const detente = document.getElementById('detente');
     const accionablesText = document.getElementById('accionablesText');
     const detenteLabel = document.getElementById('detenteLabel');
@@ -233,6 +277,11 @@
     const leeLabel = document.getElementById('leeLabel');
     const leeCover = document.getElementById('leeCover');
     const leeImg = document.getElementById('leeImg');
+
+    setTimeout(() => {
+      loader.style.display = 'none';
+      main.style.display = 'flex';
+    }, 1600);
 
     function seleccionarNuevoLibro() {
       libroActual = libros[Math.floor(Math.random() * libros.length)];
@@ -245,7 +294,7 @@
       libroActual.accionables.forEach((frase, i) => {
         const span = document.createElement('span');
         span.textContent = frase;
-        span.style.animationDelay = `${i * 0.5}s`;
+        span.style.animationDelay = `${i * 0.4}s`;
         accionablesText.appendChild(span);
       });
 
