--- a/public/index.html
+++ b/public/index.html
@@ -27,17 +27,18 @@
       background: #000;
     }
 
+    /* LOADER */
     .loader {
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: #0d0e1a;
+      background: radial-gradient(circle at center, #cccccc, #eeeeee, #dcdcdc);
       z-index: 9999;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      animation: fadeOut 1s ease 1.5s forwards;
+      animation: fadeOut 1s ease 1.6s forwards;
     }
 
     .loader img {
@@ -48,8 +49,8 @@
     .loader p {
       margin-top: 20px;
       font-size: 14px;
-      color: #bbb;
-      opacity: 0.8;
+      color: #555;
+      opacity: 0.9;
     }
 
     @keyframes breathe {
@@ -130,30 +131,30 @@
     }
 
     .accionables {
-      background: rgba(255,255,255,0.95);
+      background: rgba(255,255,255,0.92);
       color: #111;
       flex-direction: column;
-      line-height: 1.6;
       font-size: 1rem;
       font-weight: 500;
       text-align: center;
+      justify-content: center;
     }
 
     .accionables span {
       display: block;
       margin: 6px 0;
       opacity: 0;
-      animation: riseIn 0.6s ease forwards;
+      animation: floatFadeIn 0.8s ease forwards;
     }
 
-    @keyframes riseIn {
-      0% { opacity: 0; transform: translateY(12px); }
-      100% { opacity: 1; transform: translateY(0); }
+    @keyframes floatFadeIn {
+      0% { opacity: 0; transform: translateY(16px) scale(0.98); }
+      100% { opacity: 1; transform: translateY(0) scale(1); }
     }
 
     .portada-wrapper img {
-      max-height: 98%;
-      max-width: 98%;
+      max-height: 99%;
+      max-width: 99%;
       object-fit: contain;
       border-radius: 14px;
       box-shadow: 0 25px 60px rgba(0,0,0,0.4);
@@ -162,8 +163,8 @@
     }
 
     @keyframes floatLoop {
-      0%, 100% { transform: translateY(0px) scale(1) rotateY(0deg); }
-      50% { transform: translateY(-12px) scale(1.04) rotateY(1.5deg); }
+      0%, 100% { transform: translateY(0px) scale(1.01) rotateY(0deg); }
+      50% { transform: translateY(-10px) scale(1.06) rotateY(2deg); }
     }
 
     .hidden {
