--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
       height: 100%;
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1e1f2a);
-      animation: bgFlow 18s infinite alternate;
+      animation: bgFlow 20s infinite alternate;
       color: white;
     }
 
     @keyframes bgFlow {
       0% { background: linear-gradient(135deg, #0d0e1a, #1e1f2a); }
-      50% { background: linear-gradient(135deg, #1f2235, #2c2f40); }
+      50% { background: linear-gradient(135deg, #222539, #393c5a); }
       100% { background: linear-gradient(135deg, #0d0e1a, #1e1f2a); }
     }
 
@@ -27,43 +27,8 @@
       background: #000;
     }
 
-    /* LOADER */
-    .loader {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: radial-gradient(circle at center, #cccccc, #eeeeee, #dcdcdc);
-      z-index: 9999;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      animation: fadeOut 1s ease 1.6s forwards;
-    }
-
-    .loader img {
-      width: 80px;
-      animation: breathe 2.5s ease-in-out infinite;
-    }
-
-    .loader p {
-      margin-top: 20px;
-      font-size: 14px;
-      color: #555;
-      opacity: 0.9;
-    }
-
-    @keyframes breathe {
-      0%, 100% { transform: scale(1); opacity: 0.9; }
-      50% { transform: scale(1.15); opacity: 1; }
-    }
-
-    @keyframes fadeOut {
-      to { opacity: 0; visibility: hidden; pointer-events: none; }
-    }
-
     .main {
-      display: none;
+      display: flex;
       flex-direction: column;
       height: 100vh;
     }
@@ -131,44 +96,45 @@
     }
 
     .accionables {
-      background: rgba(255,255,255,0.92);
+      background: rgba(255,255,255,0.93);
       color: #111;
       flex-direction: column;
       font-size: 1rem;
       font-weight: 500;
-      text-align: center;
       justify-content: center;
+      padding: 12px;
     }
 
     .accionables span {
       display: block;
       margin: 6px 0;
       opacity: 0;
-      animation: floatFadeIn 0.8s ease forwards;
+      transform: scale(0.9);
+      animation: burstIn 0.6s ease forwards;
     }
 
-    @keyframes floatFadeIn {
-      0% { opacity: 0; transform: translateY(16px) scale(0.98); }
-      100% { opacity: 1; transform: translateY(0) scale(1); }
+    @keyframes burstIn {
+      0% { opacity: 0; transform: scale(0.6) translateY(10px); filter: blur(2px); }
+      50% { opacity: 0.8; transform: scale(1.05) translateY(-4px); filter: blur(0); }
+      100% { opacity: 1; transform: scale(1) translateY(0); }
     }
 
     .portada-wrapper img {
-      max-height: 99%;
-      max-width: 99%;
+      max-height: 104%;
+      max-width: 104%;
       object-fit: contain;
       border-radius: 14px;
       box-shadow: 0 25px 60px rgba(0,0,0,0.4);
-      animation: floatLoop 4s ease-in-out infinite;
+      animation: dopamineFloat 6s ease-in-out infinite;
       transform-origin: center;
     }
 
-    @keyframes floatLoop {
-      0%, 100% { transform: translateY(0px) scale(1.01) rotateY(0deg); }
-      50% { transform: translateY(-10px) scale(1.06) rotateY(2deg); }
-    }
-
-    .hidden {
-      display: none !important;
+    @keyframes dopamineFloat {
+      0% { transform: scale(1) rotateY(0deg) translateY(0); filter: brightness(1); }
+      25% { transform: scale(1.04) rotateY(1deg) translateY(-8px); filter: brightness(1.05); }
+      50% { transform: scale(1.02) rotateY(2deg) translateY(2px); filter: brightness(0.95); }
+      75% { transform: scale(1.05) rotateY(-1deg) translateY(-6px); filter: brightness(1.1); }
+      100% { transform: scale(1) rotateY(0deg) translateY(0); filter: brightness(1); }
     }
 
     .footer {
@@ -196,18 +162,13 @@
       height: 24px;
       opacity: 0.9;
     }
+
+    .hidden { display: none !important; }
   </style>
 </head>
 <body>
 
-  <!-- Loader -->
-  <div class="loader" id="loader">
-    <img src="/imagotipo.png" alt="Loader">
-    <p>Una pausa real puede cambiarlo todo</p>
-  </div>
-
-  <!-- App -->
-  <div class="main" id="main">
+  <div class="main">
     <div class="grid">
       <div class="block" id="detente" style="background: linear-gradient(135deg, #ff5f6d, #ffc371);">
         <div class="block-content label" id="detenteLabel">Detente</div>
@@ -268,8 +229,6 @@
     let detenteOpen = false;
     let leeOpen = false;
 
-    const loader = document.getElementById('loader');
-    const main = document.getElementById('main');
     const detente = document.getElementById('detente');
     const accionablesText = document.getElementById('accionablesText');
     const detenteLabel = document.getElementById('detenteLabel');
@@ -278,11 +237,6 @@
     const leeLabel = document.getElementById('leeLabel');
     const leeCover = document.getElementById('leeCover');
     const leeImg = document.getElementById('leeImg');
-
-    setTimeout(() => {
-      loader.style.display = 'none';
-      main.style.display = 'flex';
-    }, 1600);
 
     function seleccionarNuevoLibro() {
       libroActual = libros[Math.floor(Math.random() * libros.length)];
