--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       width: 100%;
       height: 100%;
       font-family: 'Archivo', sans-serif;
+      overflow: hidden;
       background: linear-gradient(135deg, #0d0e1a, #1e1f2a);
       animation: bgFlow 20s infinite alternate;
       color: white;
@@ -19,7 +20,7 @@
 
     @keyframes bgFlow {
       0% { background: linear-gradient(135deg, #0d0e1a, #1e1f2a); }
-      50% { background: linear-gradient(135deg, #222539, #393c5a); }
+      50% { background: linear-gradient(135deg, #2e3260, #1b1d32); }
       100% { background: linear-gradient(135deg, #0d0e1a, #1e1f2a); }
     }
 
@@ -64,7 +65,7 @@
       background-size: cover;
       background-position: center;
       transition: background 0.5s ease, transform 0.4s ease;
-      min-height: 44vh;
+      min-height: 40vh;
     }
 
     .block.clear {
@@ -131,35 +132,42 @@
 
     .footer {
       flex-shrink: 0;
-      padding: 1.2vh;
+      padding: 2vh;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: flex-end;
       gap: 1vh;
-      position: relative;
+      height: 14vh;
     }
 
     .shock {
-      background: linear-gradient(to right, #F00000, #DC281E);
-      color: white;
+      background: linear-gradient(90deg, #f83600, #f9d423);
+      color: black;
       font-weight: bold;
       border: none;
       border-radius: 28px;
       padding: 12px 24px;
       font-size: 0.95rem;
       cursor: pointer;
-      box-shadow: 0 4px 16px rgba(255, 80, 80, 0.25);
+      box-shadow: 0 0 12px rgba(255, 190, 80, 0.6);
       display: none;
+      animation: pulse 1.2s infinite;
     }
 
     .shock.visible {
       display: inline-block;
-      animation: popIn 0.6s ease forwards;
+      animation: popIn 0.4s ease forwards, pulse 1.4s infinite ease-in-out;
     }
 
     @keyframes popIn {
       from { opacity: 0; transform: scale(0.8); }
       to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); box-shadow: 0 0 12px rgba(255, 190, 80, 0.6); }
+      50% { transform: scale(1.08); box-shadow: 0 0 16px rgba(255, 220, 120, 0.9); }
     }
 
     .trigguiletras {
@@ -174,12 +182,12 @@
 
   <div class="main">
     <div class="grid">
-      <div class="block" id="detente" style="background: linear-gradient(135deg, #ff5f6d, #ffc371);">
+      <div class="block" id="detente" style="background: linear-gradient(135deg, #f77062, #fe5196);">
         <div class="block-content label" id="detenteLabel">Detente</div>
         <div class="block-content accionables hidden" id="accionablesText"></div>
       </div>
 
-      <div class="block" id="lee" style="background: linear-gradient(135deg, #00c6ff, #0072ff);">
+      <div class="block" id="lee" style="background: linear-gradient(135deg, #43e97b, #38f9d7);">
         <div class="block-content label" id="leeLabel">Lee</div>
         <div class="block-content portada-wrapper hidden" id="leeCover">
           <img id="leeImg" src="" alt="portada del libro">
@@ -212,7 +220,6 @@
     let libroActual = null;
     let detenteOpen = false;
     let leeOpen = false;
-    let tiempoInicio = null;
 
     const detente = document.getElementById('detente');
     const accionablesText = document.getElementById('accionablesText');
@@ -229,11 +236,12 @@
 
     function mostrarContenido() {
       seleccionarNuevoLibro();
+
       accionablesText.innerHTML = '';
       libroActual.accionables.forEach((frase, i) => {
         const span = document.createElement('span');
         span.textContent = frase;
-        span.style.animationDelay = `${i * 0.4}s`;
+        span.style.animationDelay = `${i * 0.3}s`;
         accionablesText.appendChild(span);
       });
 
@@ -251,12 +259,11 @@
       detenteOpen = true;
       leeOpen = true;
 
-      tiempoInicio = Date.now();
       setTimeout(() => {
         if (detenteOpen && leeOpen) {
           shockBtn.classList.add('visible');
         }
-      }, 6000);
+      }, 3000);
     }
 
     function ocultarDetente() {
