--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
       width: 100%;
       height: 100%;
       font-family: 'Archivo', sans-serif;
-      overflow: hidden;
       background: linear-gradient(135deg, #0d0e1a, #1e1f2a);
       animation: bgFlow 20s infinite alternate;
       color: white;
+      overflow-y: auto; /* habilita swipe refresh */
+      -webkit-overflow-scrolling: touch;
     }
 
     @keyframes bgFlow {
@@ -32,14 +33,15 @@
       display: flex;
       flex-direction: column;
       height: 100vh;
+      justify-content: space-between;
     }
 
     .grid {
-      flex: 1;
       display: flex;
       flex-direction: column;
       gap: 2vh;
       padding: 2vh 2vw;
+      flex-grow: 1;
       justify-content: center;
     }
 
@@ -65,7 +67,7 @@
       background-size: cover;
       background-position: center;
       transition: background 0.5s ease, transform 0.4s ease;
-      min-height: 40vh;
+      min-height: 34vh;
     }
 
     .block.clear {
@@ -132,13 +134,12 @@
 
     .footer {
       flex-shrink: 0;
-      padding: 2vh;
+      padding: 2vh 2vw;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-end;
       gap: 1vh;
-      height: 14vh;
     }
 
     .shock {
@@ -152,7 +153,7 @@
       cursor: pointer;
       box-shadow: 0 0 12px rgba(255, 190, 80, 0.6);
       display: none;
-      animation: pulse 1.2s infinite;
+      animation: pulse 1.2s infinite ease-in-out;
     }
 
     .shock.visible {
@@ -197,7 +198,7 @@
 
     <div class="footer">
       <button class="shock" id="shockBtn">📚👊 Chócalas por leer un libro físico</button>
-      <img src="/trigguiletras.png" class="trigguiletras" />
+      <img src="/trigguiletras.png" class="trigguiletras" alt="Triggui logo" />
     </div>
   </div>
 
